syntax = "proto3";

import "google/protobuf/empty.proto";

package gsm.protobuf.taskpb;
option go_package = "gsm/protobuf/taskpb";

service TaskService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Update (UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc GetAll (GetAllRequest) returns (GetAllResponse);
}

message GetAllResponse {
    repeated Task items = 1; 
}

message Task {
    int64 id = 1;
    string title = 2;
}

message GetAllRequest {
    int64 page = 1;
    int64 size = 2;
    string term = 3;
}

message DeleteRequest {
    int64 id = 1;
}

message UpdateRequest {
    int64 id = 1;
    string title = 2;
}

message GetResponse {
    int64 id = 1;
    string title = 2;
}

message GetRequest {
    int64 id = 1;
}

message CreateResponse {
    int64 id = 1;
    string title = 2;
}

message CreateRequest {
    string title = 1;
}